//file:noinspection DependencyNotationArgument
//file:noinspection GroovyAssignabilityCheck
//file:noinspection GroovyImplicitNullArgumentCall
plugins {
    id 'java-gradle-plugin'
    id 'java-test-fixtures'
    id 'maven-publish'
    id 'signing'
    id 'jacoco'
    id 'io.github.gmazzo.gradle.testkit.jacoco' version '1.1.0'
}

group = 'com.senthora.gatlingfx'
version = '0.1.0-SNAPSHOT'

def runtimeVersion = '0.1.0-SNAPSHOT'

processResources {
    filesMatching('gatlingfx.properties') {
        expand(runtimeVersion: runtimeVersion)
    }
}

gradlePlugin {
    plugins {
        gatlingfx {
            id = 'com.senthora.gatlingfx'
            implementationClass = 'com.senthora.gatlingfx.gradle.plugin.GatlingFxPlugin'
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withJavadocJar()
    withSourcesJar()
}
tasks.withType(Javadoc).configureEach {
    failOnError = false
    options.addStringOption('Xdoclint:none', '-quiet')
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri("https://central.sonatype.com/repository/maven-snapshots/")
    }
}

dependencies {
    testFixturesImplementation libs.assertj.core

    testImplementation platform(libs.junit.bom)
    testImplementation libs.junit.jupiter
    testRuntimeOnly libs.junit.platform.launcher

    testImplementation libs.assertj.core

    testImplementation platform(libs.mockito.bom)
    testImplementation libs.mockito.core
}

testing {
    suites {
        integrationTest(JvmTestSuite) {
            dependencies {
                implementation gradleApi()
                implementation(project())
                implementation "com.senthora.gatlingfx:gatlingfx-runtime:$runtimeVersion"
                implementation testFixtures(project())

                implementation platform(libs.junit.bom)
                implementation libs.junit.jupiter
                implementation libs.assertj.core
            }
        }
        functionalTest(JvmTestSuite) {
            dependencies {
                implementation(project())
                implementation testFixtures(project())
                runtimeOnly(files(tasks.pluginUnderTestMetadata))

                implementation gradleTestKit()
                implementation platform(libs.junit.bom)
                implementation libs.junit.jupiter
                implementation libs.assertj.core
            }
        }
    }
}

configurations.configureEach {
    exclude group: "ch.qos.logback", module: "logback-classic"
}

tasks.withType(Test).configureEach {
    outputs.upToDateWhen { false }
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
}

tasks.named("integrationTest") {
    shouldRunAfter(tasks.named("test"))
}

tasks.named("functionalTest") {
    shouldRunAfter(tasks.named("integrationTest"))
}

jacocoTestReport {
    executionData.from fileTree(layout.buildDirectory.dir("jacoco")) {
        include("*.exec")
    }
    reports {
        xml.required = true
        html.required = true
    }
}

[configurations.testFixturesApiElements, configurations.testFixturesRuntimeElements].each {
    components.java.withVariantsFromConfiguration(it) {
        skip()
    }
}

publishing {
    publications {
        pluginMaven(MavenPublication) {
            pom {
                name = "GatlingFx Gradle Plugin"
                description = "Gradle plugin for running GatlingFx simulations."
                url = "https://github.com/senthora/gatlingfx-gradle-plugin"

                licenses {
                    license {
                        name = "Apache License, Version 2.0"
                        url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
                    }
                }
                developers {
                    developer {
                        id = "senthora"
                        name = "meowpow-png"
                    }
                }
                scm {
                    url = "https://github.com/senthora/gatlingfx-gradle-plugin"
                    connection = "scm:git:https://github.com/senthora/gatlingfx-gradle-plugin.git"
                    developerConnection = "scm:git:git@github.com:senthora/gatlingfx-gradle-plugin.git"
                }
            }
        }
    }
    repositories {
        if (version.toString().endsWith("-SNAPSHOT")) {
            maven {
                name = "snapshots"
                url = "https://central.sonatype.com/repository/maven-snapshots/"
                credentials {
                    username = findProperty("mavenCentralUsername")
                    password = findProperty("mavenCentralPassword")
                }
            }
        }
    }
}

if (!version.toString().endsWith('-SNAPSHOT')) {
    signing {
        useGpgCmd()
        sign publishing.publications.pluginMaven
    }
}
